welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (getCouleurSol() == Color.green) {
       ^