welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()) {return false}
  else if (getCouleurSol() != Color.green) {
    recule()
      return false}
  else if (getCouleurSol() == Color.green) {
    recule()
    return true}
}